# robot-framework

./: LICENSE.txt  README.md  __init__.py  mock_optitrack.py  movement_mechanics.py  package.xml  process_log.py  setup.cfg  setup.py  start_simulated_agents.sh  utils.py
robot_framework/: camera.py  communication.py  controller.py  crazyflies.py  knowledge.py  logic.py  main.py  main_Vd_different_N.py  main_convergence_time_experiment.py  main_crazyflies.py  main_discrete_sync_and_swarm.py  main_kpkdemo_balboa.py  main_kpkdemo_px4.py  main_kpkdemo_simulation.py  main_range_sync_and_swarm.py  main_swarmalatorbot_balboa.py  main_swarmalatorbot_bs.py  main_swarmalatorbot_crazyflies.py  main_swarming.py  main_swarming_async.py  main_sync_and_swarm.py  offline_system_state.py  order_params_experiments.ipynb  plot_order_params.ipynb  plot_results.py  position_feedback.py  pycrazyswarm  pykpkswarm  rf_mission_executor.py  ros_communication.py  ros_system_state.py  state.py  swarming_plots.ipynb  system_state.py  visualization.py
robot_framework/communication/: base_communication.py  offline_communication.py  offline_distributed_communication.py  ros_communication.py
robot_framework/controller/: base_controller.py  bs_controller.py  offline_controller.py  offline_controller_with_teleoperation.py  ros_controller.py  ros_controller_with_subsets.py  synchronized_offline_controller.py  teleoperation.py
robot_framework/knowledge/: base_knowledge.py  separate_knowledge.py  shared_knowledge.py
robot_framework/logger/: state_log.py
robot_framework/logic/: base_logic.py  (+5 more)
(+19 files in other folders)
